<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="w_hello">Hello World, MainActivity!</string>
    <string name="w_xlistview_header_hint_normal">下拉刷新...</string>
    <string name="w_xlistview_header_hint_ready">松开刷新数据</string>
    <string name="w_xlistview_header_hint_loading">正在刷新...</string>
    <string name="w_xlistview_header_last_time">最近更新：</string>
    <string name="w_xlistview_footer_hint_normal">查看更多</string>
    <string name="w_xlistview_footer_hint_ready">松开加载更多</string>
    <string name="app_name">来此party</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="demo_name_offline">离线地图功能</string>
    <string name="nearby_1000">1000米</string>
    <string name="nearby_3000">3000米</string>
    <string name="nearby_5000">5000米</string>
    <string name="poiinfolist">poi列表</string>
    <string name="no_data">没有找到符合条件数据</string>
    <string name="app_widget2x2">Notes 2x2</string>
    <string name="app_widget4x4">Notes 4x4</string>
    <string name="widget_havenot_content">No associated note found, click to create associated note.</string>
    <string name="widget_under_visit_mode">Privacy mode，can not see note content</string>
    <string name="notelist_string_info">...</string>
    <string name="notelist_menu_new">Add note</string>
    <string name="delete_remind_time_message">Delete reminder successfully</string>
    <string name="set_remind_time_message">Set reminder</string>
    <string name="note_alert_expired">Expired</string>
    <string name="format_date_ymd">yyyyMMdd</string>
    <string name="format_datetime_mdhm">MMMd kk:mm</string>
    <string name="notealert_ok">Got it</string>
    <string name="notealert_enter">Take a look</string>
    <string name="note_link_tel">Call</string>
    <string name="note_link_email">Send email</string>
    <string name="note_link_web">Browse web</string>
    <string name="note_link_other">Open map</string>
    <string name="file_path">/MIUI/notes/</string>
    <string name="file_name_txt_format">notes_%s.txt</string>
    <string name="format_folder_files_count">(%d)</string>
    <string name="menu_create_folder">New Folder</string>
    <string name="menu_export_text">Export text</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_sync_cancel">Cancel syncing</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_move">Move to folder</string>
    <string name="menu_select_title">%d selected</string>
    <string name="menu_select_none">Nothing selected, the operation is invalid</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_deselect_all">Deselect all</string>
    <string name="menu_font_size">Font size</string>
    <string name="menu_font_small">Small</string>
    <string name="menu_font_normal">Medium</string>
    <string name="menu_font_large">Large</string>
    <string name="menu_font_super">Super</string>
    <string name="menu_list_mode">Enter check list</string>
    <string name="menu_normal_mode">Leave check list</string>
    <string name="menu_folder_view">View folder</string>
    <string name="menu_folder_delete">Delete folder</string>
    <string name="menu_folder_change_name">Change folder name</string>
    <string name="folder_exist">The folder %1$s exist, please rename</string>
    <string name="menu_share">Share</string>
    <string name="menu_send_to_desktop">Send to home</string>
    <string name="menu_alert">Remind me</string>
    <string name="menu_remove_remind">Delete reminder</string>
    <string name="menu_title_select_folder">Select folder</string>
    <string name="menu_move_parent_folder">Parent folder</string>
    <string name="info_note_enter_desktop">Note added to home</string>
    <string name="alert_message_delete_folder">Confirm to delete folder and its notes?</string>
    <string name="alert_title_delete">Delete selected notes</string>
    <string name="alert_message_delete_notes">Confirm to delete the selected %d notes?</string>
    <string name="alert_message_delete_note">Confirm to delete this note?</string>
    <string name="format_move_notes_to_folder">Have moved selected %1$d notes to %2$s folder</string>
    <string name="error_sdcard_unmounted">SD card busy, not available now</string>
    <string name="error_sdcard_export">Export failed, please check SD card</string>
    <string name="error_note_not_exist">The note is not exist</string>
    <string name="error_note_empty_for_clock">Sorry, can not set clock on empty note</string>
    <string name="error_note_empty_for_send_to_desktop">Sorry, can not send and empty note to home</string>
    <string name="success_sdcard_export">Export successful</string>
    <string name="failed_sdcard_export">Export fail</string>
    <string name="format_exported_file_location">Export text file (%1$s) to SD (%2$s) directory</string>
    <string name="ticker_syncing">Syncing notes...</string>
    <string name="ticker_success">Sync is successful</string>
    <string name="ticker_fail">Sync is failed</string>
    <string name="ticker_cancel">Sync is canceled</string>
    <string name="success_sync_account">Sync is successful with account %1$s</string>
    <string name="error_sync_network">Sync failed, please check network and account settings</string>
    <string name="error_sync_internal">Sync failed, internal error occurs</string>
    <string name="error_sync_cancelled">Sync is canceled</string>
    <string name="sync_progress_login">Logging into %1$s...</string>
    <string name="sync_progress_init_list">Getting remote note list...</string>
    <string name="sync_progress_syncing">Synchronize local notes with Google Task...</string>
    <string name="preferences_title">Settings</string>
    <string name="preferences_account_title">Sync account</string>
    <string name="preferences_account_summary">Sync notes with google task</string>
    <string name="preferences_last_sync_time">Last sync time %1$s</string>
    <string name="preferences_last_sync_time_format">yyyy-MM-dd hh:mm:ss</string>
    <string name="preferences_add_account">Add account</string>
    <string name="preferences_menu_change_account">Change sync account</string>
    <string name="preferences_menu_remove_account">Remove sync account</string>
    <string name="preferences_menu_cancel">Cancel</string>
    <string name="preferences_button_sync_immediately">Sync immediately</string>
    <string name="preferences_button_sync_cancel">Cancel syncing</string>
    <string name="preferences_dialog_change_account_title">Current account %1$s</string>
    <string name="preferences_dialog_change_account_warn_msg">All sync related information will be deleted, which may result in duplicated items sometime</string>
    <string name="preferences_dialog_select_account_title">Sync notes</string>
    <string name="preferences_dialog_select_account_tips">Please select a google account. Local notes will be synced with google task.</string>
    <string name="preferences_toast_cannot_change_account">Cannot change the account because sync is in progress</string>
    <string name="preferences_toast_success_set_accout">%1$s has been set as the sync account</string>
    <string name="preferences_bg_random_appear_title">New note background color random</string>
    <string name="button_delete">Delete</string>
    <string name="call_record_folder_name">Call notes</string>
    <string name="hint_foler_name">Input name</string>
    <string name="search_label">Searching Notes</string>
    <string name="search_hint">Search notes</string>
    <string name="search_setting_description">Text in your notes</string>
    <string name="search">Notes</string>
    <string name="datetime_dialog_ok">set</string>
    <string name="datetime_dialog_cancel">cancel</string>
    <string name="finding_service">Finding local services</string>
    <string name="btn_send">Send</string>
    <string name="txt_hint">Type Message</string>
    <plurals name="search_results_title">
        <item quantity="one"><xliff:g id="number" example="1">%1$s</xliff:g> result for \"<xliff:g id="search" example="???">%2$s</xliff:g>\"</item>
        
        <item quantity="other"><xliff:g id="number" example="15">%1$s</xliff:g> results for \"<xliff:g id="search" example="???">%2$s</xliff:g>\"</item>
    </plurals>
    <string name="z_xlistview_footer_hint_normal">查看更多</string>
    <string name="z_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="z_str_activitydetail">活动详细</string>
    <string name="z_str_infocenter">用户中心</string>
    <string name="z_str_actdetail">活动详情</string>
    <string name="z_str_actlocal">活动</string>
    <string name="z_str_feedback">意见反馈</string>
    <string name="z_str_aboutactivity">关于</string>
    <string name="z_str_myattendactivity">已参加活动</string>
    <string name="z_str_myattentionactivity">我的关注</string>
    <string name="z_str_buildactivity">发起活动</string>
    <string name="z_str_myactivity">主办活动</string>
    <string name="z_str_activitymembers">成员</string>
    <string name="z_str_info">我的资料</string>
    <string name="z_str_belongs">我的标签</string>
    <string name="z_str_commonsetting">设置</string>
    <string name="z_str_wayplan">路线详情</string>
    <string name="z_str_offlinemap">离线地图</string>
    <string name="z_title_infologin">登 录</string>
    <string name="z_str_infoexit">退出登录</string>
    <string name="z_str_register">注 册</string>
    <string name="z_title_reg">注 册</string>
    <string name="z_title_forgetpwd">找回密码</string>
    <string name="z_str_comment">评 论</string>
    <string name="z_str_attendactvity">参加</string>
    <string name="z_str_attendedactvity">已参加</string>
    <string name="z_str_share">分享</string>
    <string name="z_str_attentionactivity">关注</string>
    <string name="z_str_actgrade">评 分</string>
    <string name="z_str_login">登 录</string>
    <string name="z_str_sharemoment">分享动态</string>
    <string name="z_str_photoalbum">相册</string>
    <string name="z_str_photoselect">选择图片</string>
    <string name="z_str_infomodify">资料修改</string>
    <string name="z_str_regtelhint">手机号</string>
    <string name="z_str_regtel">账号</string>
    <string name="z_str_regname">昵称</string>
    <string name="z_str_regpwd">密码</string>
    <string name="z_str_username">昵称</string>
    <string name="z_str_submit">提交</string>
    <string name="z_str_sure">确定</string>
    <string name="z_str_cancel">取消</string>
    <string name="z_str_complete">完成</string>
    <string name="z_str_send">发送</string>
    <string name="z_str_momentdetail">动态详情</string>
    <string name="z_str_momentcenter">个人主页</string>
    <string name="z_str_centerinfo">个人主页</string>
    <string name="z_str_centeractivity">相关活动</string>
    <string name="z_str_centermoment">个人动态</string>
    <string name="z_str_settingdistance">搜索范围</string>
    <string name="z_str_settingmomentdistance">动态搜索范围</string>
    <string name="z_str_settinginvitefriend">邀请好友</string>
    <string name="z_str_settingactivitydistance">活动搜索范围</string>
    <string name="z_str_inmsgactdis">评论回复</string>
    <string name="z_strtab_activity">活  动</string>
    <string name="z_strtab_moment">动  态</string>
    <string name="z_strtab_more">更  多</string>
    <string name="menu_zoom_enable">Enable Zoom</string>
    <string name="menu_zoom_disable">Disable Zoom</string>
    <string name="menu_scale_fit_center">Change to FIT_CENTER</string>
    <string name="menu_scale_fit_start">Change to FIT_START</string>
    <string name="menu_scale_fit_end">Change to FIT_END</string>
    <string name="menu_scale_fit_xy">Change to FIT_XY</string>
    <string name="menu_scale_center">Change to CENTER</string>
    <string name="menu_scale_center_inside">Change to CENTER_INSIDE</string>
</resources>