<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- 标题栏 -->

    <RelativeLayout
        android:id="@+id/z_mainTitleRel"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/z_titleallbg"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/z_mainTitleLeft"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="6dp"
            android:background="@drawable/z_mainlefticon" />

        <TextView
            android:id="@+id/z_maintitlename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="6dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/z_color_titlebartextbg"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/z_mainTitleShowMore"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="6dp"
            android:background="@drawable/z_mainrightbtn" />

        <ImageButton
            android:id="@+id/z_mainSEMapIcon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@id/z_mainTitleShowMore"
            android:background="@drawable/z_map" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/w_linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingTop="2dip" >

                <TextView
                    android:id="@+id/z_tv_tab_activity"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/z_strtab_activity"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/z_tv_tab_moment"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/z_strtab_moment"
                    android:textSize="18sp" />

                <!-- 更多 -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center" >

                    <TextView
                        android:id="@+id/w_tv_tab_more"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:text="@string/z_strtab_more"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/z_moreTagRedPoint"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/w_tv_tab_more"
                        android:src="@drawable/z_redpoint"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="bottom"
            android:background="@drawable/z_fragmentbottomline"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/w_iv_bottom_line"
                android:layout_width="40dip"
                android:layout_height="2dip"
                android:scaleType="matrix" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <android.support.v4.view.ViewPager
            android:id="@+id/w_vPager"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ffffffff"
            android:fastScrollEnabled="true"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" >
        </android.support.v4.view.ViewPager>
    </RelativeLayout>

</LinearLayout>